@@ -2,7 +2,7 @@ Package: heatmaply
 Type: Package
 Title: Interactive Cluster Heat Maps Using 'plotly'
 Version: 0.8.0
-Date: 2017-03-18
+Date: 2017-03-19
 Authors@R: c(person("Tal", "Galili", role = c("aut", "cre", "cph"), email =
     "tal.galili@gmail.com", comment = "https://www.r-statistics.com"),
     person("Alan", "Ocallaghan", comment = "https://github.com/Alanocallaghan",role = "ctb"),
@@ -34,14 +34,15 @@ Imports:
     seriation,
     utils,
     stats,
+    grDevices,
     colorspace,
+    RColorBrewer,
     GGally,
     htmlwidgets
 Suggests:
     knitr,
     rmarkdown,
-    gplots,
-    RColorBrewer
+    gplots
 VignetteBuilder: knitr
 License: GPL-2 | GPL-3
 URL: https://cran.r-project.org/package=heatmaply,
