@@ -8,6 +8,33 @@ S3method(normalize,matrix)
 S3method(percentize,data.frame)
 S3method(percentize,default)
 S3method(percentize,matrix)
+export(Blues)
+export(BrBG)
+export(BuGn)
+export(BuPu)
+export(GnBu)
+export(Greens)
+export(Greys)
+export(OrRd)
+export(Oranges)
+export(PRGn)
+export(PiYG)
+export(PuBu)
+export(PuBuGn)
+export(PuOr)
+export(PuRd)
+export(Purples)
+export(RdBu)
+export(RdGy)
+export(RdPu)
+export(RdYlBu)
+export(RdYlGn)
+export(Reds)
+export(Spectral)
+export(YlGn)
+export(YlGnBu)
+export(YlOrBr)
+export(YlOrRd)
 export(ggheatmap)
 export(heatmaply)
 export(heatmapr)
